#7 Ajout de note sur un job

--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -39,3 +39,7 @@ Post processing: Post traitement
 Success codes: Exit en Succès
 Successors: Successeurs
 File name: Nom de fichier
+Job note: Note sur le traitement
+New note: Nouvelle note
+Use template: Utiliser un modèle
+Is a template: Est un modèle
