Ajout des suggestions pour la documentation

--- a/Resources/translations/messages.fr.yml
+++ b/Resources/translations/messages.fr.yml
@@ -43,3 +43,5 @@ Job note: Note sur le traitement
 New note: Nouvelle note
 Use template: Utiliser un modèle
 Is a template: Est un modèle
+No doc found: Aucune documentation trouvée
+No suggestion: Aucune suggestion
